feat: cadastro de aviso de viagem

--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -2,6 +2,7 @@ NotBlank={0} é obrigatório(a)
 NotNull={0} é obrigatório(a)
 Email={0} deve ser um e-mail válido
 Positive={0} deve ser maior que 0
+Future={0} deve ser uma data futura
 
 #PropostaRequest
 propostaRequest.documento=Documento do dono da proposta
@@ -9,3 +10,10 @@ propostaRequest.email=Email do dono da proposta
 propostaRequest.nome=Nome do dono da proposta
 propostaRequest.endereco=Endereço do dono da proposta
 propostaRequest.salario=Salário do dono da proposta
+
+#BiometriaRequest
+biometriaRequest.fingerPrint=Biometria do cartão
+
+#AvisoViagemRequest
+avisoViagemRequest.destino=Destino do aviso de viagem
+avisoViagemRequest.dataTermino=Data de término do aviso de viagem
